# book_reviews

./: .env  .gitignore  Cargo.toml  FinalratingCalculate.py  GoogleAPI.py  LICENSE  README.md  SQL_Querries.txt  amazon.ipynb  books.sqlite  main.py  python-packages.nix  remove_duplicates.ipynb  requirements.txt  shell.nix
.github/workflows/: ci.yml
datasets/: isbns.csv
definitions/: amazon.yml  goodreads.yml
scripts/: amazon.ipynb  main.py  notebooks.ipynb
src/: main.rs
src/db/: models.rs  schema.rs
static/: base.hbs  index.hbs  search.hbs  stats.hbs
static/css/: custom.css
static/js/: custom.js
