[package]
name = "nytextended"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.20"
actix-files="0.6.0-beta.14"
log = "0.4"
env_logger = "0.9.0"
serde = "1.0"
serde_json = "1.0"
handlebars = { version = "4.2.1", features = ["dir_source"] }

diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8.9"
dotenv = "0.9.0"
