[package]
name = "nytextended"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
actix-files="0.6.0-beta.16"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = { version = "4.2", features = ["dir_source"] }

diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.9"
